fix: z-index fixed in footer.

--- a/src/components/layout/Footer/Footer.module.sass
+++ b/src/components/layout/Footer/Footer.module.sass
@@ -23,7 +23,7 @@ $transition-fast: all 0.2s ease
         max-width: 800px
         margin: 0 auto
         position: relative
-        z-index: 1
+        z-index: 0
 
     &__logo
         display: inline-flex
